Fix z-index of screens

--- a/src/Components/Screens/Screens.sass
+++ b/src/Components/Screens/Screens.sass
@@ -7,7 +7,7 @@
   padding: 0 10%
 
   .screen
-    z-index: 1
+    //z-index: 0
     overflow: hidden
     height: 100%
     width: auto
